<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.LeaveActivity">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:src="@drawable/ic_baseline_arrow_back_ios_24" />


                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="16dp"
                    android:text="全选"
                    android:textColor="@color/white" />

            </FrameLayout>

        </com.google.android.material.appbar.AppBarLayout>


        <Button
            android:id="@+id/refuse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/refuse"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/pass"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/agree"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/refuse" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/barrier"
            app:layout_constraintTop_toBottomOf="@+id/key_word" />

        <TextView
            android:id="@+id/tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leave_empty_tip"
            android:textSize="24sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/recycle_view"
            app:layout_constraintEnd_toEndOf="@+id/recycle_view"
            app:layout_constraintStart_toStartOf="@+id/recycle_view"
            app:layout_constraintTop_toTopOf="@+id/recycle_view" />

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.2"
            app:layout_constraintBottom_toBottomOf="@+id/recycle_view"
            app:layout_constraintEnd_toEndOf="@+id/recycle_view"
            app:layout_constraintStart_toStartOf="@+id/recycle_view"
            app:layout_constraintTop_toTopOf="@+id/recycle_view" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top"
            app:constraint_referenced_ids="refuse,pass"
            tools:layout_editor_absoluteX="88dp"
            tools:layout_editor_absoluteY="207dp" />


        <Button
            android:id="@+id/key_word"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/keyword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>